@@ -21,18 +21,16 @@
 
 package dynamic.mapper.core;
 
-import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.InputStreamReader;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.util.Enumeration;
 import java.util.List;
 import java.util.Map;
-import java.util.Properties;
+
+import org.yaml.snakeyaml.Yaml;
 
 import org.apache.commons.io.IOUtils;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -42,13 +40,16 @@ import com.cumulocity.rest.representation.inventory.ManagedObjectRepresentation;
 import com.cumulocity.sdk.client.inventory.BinariesApi;
 
 import dynamic.mapper.App;
+import dynamic.mapper.configuration.ExtensionConfiguration;
 import dynamic.mapper.core.facade.InventoryFacade;
+import dynamic.mapper.model.Direction;
 import dynamic.mapper.model.Extension;
+import dynamic.mapper.model.ExtensionConfig;
 import dynamic.mapper.model.ExtensionEntry;
 import dynamic.mapper.model.ExtensionType;
 import dynamic.mapper.processor.extension.ExtensionsComponent;
-import dynamic.mapper.processor.extension.ProcessorExtensionSource;
-import dynamic.mapper.processor.extension.ProcessorExtensionTarget;
+import dynamic.mapper.processor.extension.ProcessorExtensionInbound;
+import dynamic.mapper.processor.extension.ProcessorExtensionOutbound;
 import dynamic.mapper.service.ExtensionInboundRegistry;
 import lombok.extern.slf4j.Slf4j;
 
@@ -56,9 +57,8 @@ import lombok.extern.slf4j.Slf4j;
 @Component
 public class ExtensionManager {
 
-    private static final String EXTENSION_INTERNAL_FILE = "extension-internal.properties";
-    private static final String EXTENSION_EXTERNAL_FILE = "extension-external.properties";
-    private static final String PACKAGE_MAPPING_PROCESSOR_EXTENSION_EXTERNAL = "dynamic.mapper.processor.extension.external";
+    private static final String EXTENSION_INTERNAL_FILE = "extension-internal.yaml";
+    private static final String EXTENSION_EXTERNAL_FILE = "extension-external.yaml";
 
     @Autowired
     private BinariesApi binaryApi;
@@ -73,9 +73,14 @@ public class ExtensionManager {
     @Autowired
     private ExtensionInboundRegistry extensionInboundRegistry;
 
+    @Autowired
+    private ExtensionConfiguration extensionConfiguration;
+
+    // Track classloaders for proper cleanup
+    private final Map<String, Map<String, URLClassLoader>> tenantExtensionClassLoaders = new java.util.concurrent.ConcurrentHashMap<>();
+
     public void loadProcessorExtensions(String tenant) {
         ClassLoader internalClassloader = ExtensionManager.class.getClassLoader();
-        ClassLoader externalClassLoader = null;
 
         for (ManagedObjectRepresentation extension : extensionsComponent.get()) {
             Map<?, ?> props = (Map<?, ?>) (extension.get(ExtensionsComponent.PROCESSOR_EXTENSION_TYPE));
@@ -85,6 +90,7 @@ public class ExtensionManager {
                     extName);
             InputStream downloadInputStream = null;
             FileOutputStream outputStream = null;
+            URLClassLoader externalClassLoader = null;
             try {
                 if (external) {
                     // step 1 download extension for binary repository
@@ -105,6 +111,11 @@ public class ExtensionManager {
                     // step 3 parse list of extensions
                     URL[] urls = { tempFile.toURI().toURL() };
                     externalClassLoader = new URLClassLoader(urls, App.class.getClassLoader());
+
+                    // Track the classloader for cleanup
+                    tenantExtensionClassLoaders.computeIfAbsent(tenant, k -> new java.util.concurrent.ConcurrentHashMap<>())
+                            .put(extName, externalClassLoader);
+
                     registerExtensionInProcessor(tenant, extension.getId().getValue(), extName, externalClassLoader,
                             external);
                 } else {
@@ -113,12 +124,15 @@ public class ExtensionManager {
                 }
             } catch (IOException e) {
                 log.error("{} - IO Exception occurred when loading extension: ", tenant, e);
+                // Close classloader if registration failed
+                closeClassLoader(externalClassLoader, tenant, extName);
             } catch (SecurityException e) {
                 log.error("{} - Security Exception occurred when loading extension: ", tenant, e);
+                closeClassLoader(externalClassLoader, tenant, extName);
             } catch (IllegalArgumentException e) {
                 log.error("{} - Invalid argument Exception occurred when loading extension: ", tenant, e);
+                closeClassLoader(externalClassLoader, tenant, extName);
             } finally {
-                // Consider cleaning up resources here
                 if (downloadInputStream != null) {
                     try {
                         downloadInputStream.close();
@@ -137,6 +151,17 @@ public class ExtensionManager {
         }
     }
 
+    private void closeClassLoader(URLClassLoader classLoader, String tenant, String extName) {
+        if (classLoader != null) {
+            try {
+                classLoader.close();
+                log.debug("{} - Closed classloader for extension: {}", tenant, extName);
+            } catch (IOException e) {
+                log.warn("{} - Failed to close classloader for extension: {}", tenant, extName, e);
+            }
+        }
+    }
+
     private void registerExtensionInProcessor(String tenant, String id, String extensionName, ClassLoader dynamicLoader,
             boolean external)
             throws IOException {
@@ -145,90 +170,140 @@ public class ExtensionManager {
 
         String resource = external ? EXTENSION_EXTERNAL_FILE : EXTENSION_INTERNAL_FILE;
         InputStream resourceAsStream = dynamicLoader.getResourceAsStream(resource);
-        InputStreamReader in = null;
-        try {
-            in = new InputStreamReader(resourceAsStream);
-        } catch (Exception e) {
+
+        if (resourceAsStream == null) {
             log.error("{} - Registration file: {} missing, ignoring to load extensions from: {}", tenant,
                     resource,
                     (external ? "EXTERNAL" : "INTERNAL"));
             throw new IOException("Registration file: " + resource + " missing, ignoring to load extensions from:"
                     + (external ? "EXTERNAL" : "INTERNAL"));
         }
-        BufferedReader buffered = new BufferedReader(in);
-        Properties newExtensions = new Properties();
 
-        if (buffered != null)
-            newExtensions.load(buffered);
-        log.debug("{} - Preparing to load extensions:" + newExtensions.toString(), tenant);
+        // Parse YAML configuration
+        Yaml yaml = new Yaml();
+        ExtensionConfig extensionConfig;
+        try {
+            extensionConfig = yaml.loadAs(resourceAsStream, ExtensionConfig.class);
+        } catch (Exception e) {
+            log.error("{} - Failed to parse YAML file: {}", tenant, resource, e);
+            throw new IOException("Failed to parse YAML file: " + resource, e);
+        }
 
-        Enumeration<?> extensionEntries = newExtensions.propertyNames();
-        while (extensionEntries.hasMoreElements()) {
-            String key = (String) extensionEntries.nextElement();
+        if (extensionConfig == null || extensionConfig.getExtensions() == null) {
+            log.warn("{} - No extensions found in: {}", tenant, resource);
+            return;
+        }
+
+        log.debug("{} - Preparing to load {} extensions from {}", tenant,
+                extensionConfig.getExtensions().size(), resource);
+
+        for (ExtensionConfig.ExtensionDefinition definition : extensionConfig.getExtensions()) {
             Class<?> clazz;
-            ExtensionEntry extensionEntry = ExtensionEntry.builder().eventName(key).extensionName(extensionName)
-                    .fqnClassName(newExtensions.getProperty(key)).loaded(true).message("OK").build();
+            ExtensionEntry extensionEntry = ExtensionEntry.builder()
+                    .eventName(definition.getEventName())
+                    .extensionName(extensionName)
+                    .fqnClassName(definition.getClassName())
+                    .description(definition.getDescription())
+                    .version(definition.getVersion())
+                    .loaded(true)
+                    .message("Loaded successfully")
+                    .direction(Direction.UNSPECIFIED)
+                    .build();
 
             // manage extensions for Camel routes
             extensionInboundRegistry.addExtensionEntry(tenant, extensionName, extensionEntry);
 
             try {
-                clazz = dynamicLoader.loadClass(newExtensions.getProperty(key));
+                clazz = dynamicLoader.loadClass(definition.getClassName());
 
-                if (external && !clazz.getPackageName().startsWith(PACKAGE_MAPPING_PROCESSOR_EXTENSION_EXTERNAL)) {
+                if (external && !clazz.getPackageName().startsWith(extensionConfiguration.getExternalExtensionsAllowedPackage())) {
                     extensionEntry.setMessage(
-                            "Implementation must be in package: 'dynamic.mapper.processor.extension.external' instead of: "
+                            "Implementation must be in package: '" + extensionConfiguration.getExternalExtensionsAllowedPackage() + "' instead of: "
                                     + clazz.getPackageName());
                     extensionEntry.setLoaded(false);
                 } else {
-                    Object object = clazz.getDeclaredConstructor().newInstance();
-                    if (object instanceof ProcessorExtensionSource) {
-                        ProcessorExtensionSource<?> extensionImpl = (ProcessorExtensionSource<?>) clazz
-                                .getDeclaredConstructor()
-                                .newInstance();
-                        extensionEntry.setExtensionImplSource(extensionImpl);
-                        extensionEntry.setExtensionType(ExtensionType.EXTENSION_SOURCE);
-                        log.debug("{} - Successfully registered extensionImplSource : {} for key: {}",
-                                tenant,
-                                newExtensions.getProperty(key),
-                                key);
+                    // Instantiate once and reuse the same instance
+                    Object extensionInstance = clazz.getDeclaredConstructor().newInstance();
+
+                    boolean isValidExtension = false;
+
+                    // Auto-detect direction from marker interfaces
+                    if (extensionInstance instanceof ProcessorExtensionInbound) {
+                        extensionEntry.setDirection(Direction.INBOUND);
+                        log.debug("{} - Extension auto-detected as INBOUND via InboundExtension", tenant);
+                    } else if (extensionInstance instanceof ProcessorExtensionOutbound) {
+                        extensionEntry.setDirection(Direction.OUTBOUND);
+                        log.debug("{} - Extension auto-detected as OUTBOUND via OutboundExtension", tenant);
                     }
-                    if (object instanceof ProcessorExtensionTarget) {
-                        ProcessorExtensionTarget<?> extensionImpl = (ProcessorExtensionTarget<?>) clazz
-                                .getDeclaredConstructor()
-                                .newInstance();
-                        extensionEntry.setExtensionImplTarget(extensionImpl);
-                        // overwrite type since it implements both
-                        extensionEntry.setExtensionType(ExtensionType.EXTENSION_SOURCE_TARGET);
-                        log.debug("{} - Successfully registered extensionImplTarget : {} for key: {}",
-                                tenant,
-                                newExtensions.getProperty(key),
-                                key);
+
+                    // Determine extension type - check specific types first
+                    if (extensionInstance instanceof ProcessorExtensionInbound) {
+                        // Complete inbound processing with C8YAgent
+                        extensionEntry.setExtensionImplInbound((ProcessorExtensionInbound<?>) extensionInstance);
+                        extensionEntry.setExtensionType(ExtensionType.EXTENSION_INBOUND);
+                        isValidExtension = true;
+                        log.debug("{} - Registered ProcessorExtensionInbound: {} for key: {}",
+                                tenant, definition.getClassName(), definition.getEventName());
+                    } else if (extensionInstance instanceof ProcessorExtensionOutbound) {
+                        // Complete outbound processing with request preparation
+                        extensionEntry.setExtensionImplOutbound((ProcessorExtensionOutbound<?>) extensionInstance);
+                        extensionEntry.setExtensionType(ExtensionType.EXTENSION_OUTBOUND);
+                        isValidExtension = true;
+                        log.debug("{} - Registered ProcessorExtensionOutbound: {} for key: {}",
+                                tenant, definition.getClassName(), definition.getEventName());
                     }
-                    if (!(object instanceof ProcessorExtensionSource)
-                            && !(object instanceof ProcessorExtensionTarget)) {
+
+                    if (!isValidExtension) {
                         String msg = String.format(
-                                "Extension: %s=%s is not instance of ProcessorExtension, does not extend ProcessorExtensionSource!",
-                                key,
-                                newExtensions.getProperty(key));
-                        log.warn(msg);
+                                "Extension %s=%s must implement InboundExtension, OutboundExtension, ProcessorExtensionInbound, or ProcessorExtensionOutbound!",
+                                definition.getEventName(),
+                                definition.getClassName());
+                        log.warn("{} - {}", tenant, msg);
                         extensionEntry.setMessage(msg);
                         extensionEntry.setLoaded(false);
                     }
                 }
-            } catch (Exception e) {
-                String exceptionMsg = e.getCause() == null ? e.getMessage() : e.getCause().getMessage();
-                String msg = String.format("Could not load extension: %s:%s: %s!", key,
-                        newExtensions.getProperty(key), exceptionMsg);
-                log.warn(msg);
-                e.printStackTrace();
+            } catch (ClassNotFoundException e) {
+                String msg = String.format("Could not load extension class %s:%s: %s", definition.getEventName(),
+                        definition.getClassName(), e.getMessage());
+                log.warn("{} - {}", tenant, msg);
+                log.debug("{} - Exception details: ", tenant, e);
                 extensionEntry.setMessage(msg);
                 extensionEntry.setLoaded(false);
-            } catch (Error e) {
-                String msg = String.format("Could not load extension: %s:%s: %s!", key,
-                        newExtensions.getProperty(key), e.getMessage());
-                log.warn(msg);
-                e.printStackTrace();
+            } catch (NoClassDefFoundError e) {
+                String msg = String.format("Missing dependency for extension class %s:%s: %s", definition.getEventName(),
+                        definition.getClassName(), e.getMessage());
+                log.warn("{} - {}", tenant, msg);
+                log.debug("{} - Exception details: ", tenant, e);
+                extensionEntry.setMessage(msg);
+                extensionEntry.setLoaded(false);
+            } catch (NoSuchMethodException e) {
+                String msg = String.format("Extension class %s:%s must have a public no-arg constructor", definition.getEventName(),
+                        definition.getClassName());
+                log.warn("{} - {}", tenant, msg);
+                log.debug("{} - Exception details: ", tenant, e);
+                extensionEntry.setMessage(msg);
+                extensionEntry.setLoaded(false);
+            } catch (InstantiationException | IllegalAccessException e) {
+                String msg = String.format("Could not instantiate extension class %s:%s: %s", definition.getEventName(),
+                        definition.getClassName(), e.getMessage());
+                log.warn("{} - {}", tenant, msg);
+                log.debug("{} - Exception details: ", tenant, e);
+                extensionEntry.setMessage(msg);
+                extensionEntry.setLoaded(false);
+            } catch (java.lang.reflect.InvocationTargetException e) {
+                String exceptionMsg = e.getCause() != null ? e.getCause().getMessage() : e.getMessage();
+                String msg = String.format("Extension constructor threw exception for %s:%s: %s", definition.getEventName(),
+                        definition.getClassName(), exceptionMsg);
+                log.warn("{} - {}", tenant, msg);
+                log.debug("{} - Exception details: ", tenant, e);
+                extensionEntry.setMessage(msg);
+                extensionEntry.setLoaded(false);
+            } catch (Exception e) {
+                String exceptionMsg = e.getCause() != null ? e.getCause().getMessage() : e.getMessage();
+                String msg = String.format("Unexpected error loading extension %s:%s: %s", definition.getEventName(),
+                        definition.getClassName(), exceptionMsg);
+                log.error("{} - {}", tenant, msg, e);
                 extensionEntry.setMessage(msg);
                 extensionEntry.setLoaded(false);
             }
@@ -252,11 +327,27 @@ public class ExtensionManager {
                 log.info("{} - Deleted extension: {} permanently!", tenant, extensionName);
             }
         }
+
+        // Close and remove classloader for this extension
+        Map<String, URLClassLoader> tenantClassLoaders = tenantExtensionClassLoaders.get(tenant);
+        if (tenantClassLoaders != null) {
+            URLClassLoader classLoader = tenantClassLoaders.remove(extensionName);
+            closeClassLoader(classLoader, tenant, extensionName);
+        }
+
         // manage extensions for Camel routes
         return extensionInboundRegistry.deleteExtension(tenant, extensionName);
     }
 
     public void reloadExtensions(String tenant) {
+        // Close all classloaders for this tenant before reloading
+        Map<String, URLClassLoader> tenantClassLoaders = tenantExtensionClassLoaders.remove(tenant);
+        if (tenantClassLoaders != null) {
+            for (Map.Entry<String, URLClassLoader> entry : tenantClassLoaders.entrySet()) {
+                closeClassLoader(entry.getValue(), tenant, entry.getKey());
+            }
+        }
+
         // manage extensions for Camel routes
         extensionInboundRegistry.deleteExtensions(tenant);
         loadProcessorExtensions(tenant);
@@ -282,5 +373,28 @@ public class ExtensionManager {
         log.debug("{} - Internal extension: {} registered: {}", tenant,
                 ExtensionsComponent.PROCESSOR_EXTENSION_INTERNAL_NAME,
                 ie.getId().getValue(), ie);
+    }
+
+    /**
+     * Clean up all classloaders for a tenant. Should be called during tenant offboarding.
+     */
+    public void cleanupTenantExtensions(String tenant) {
+        Map<String, URLClassLoader> tenantClassLoaders = tenantExtensionClassLoaders.remove(tenant);
+        if (tenantClassLoaders != null) {
+            for (Map.Entry<String, URLClassLoader> entry : tenantClassLoaders.entrySet()) {
+                closeClassLoader(entry.getValue(), tenant, entry.getKey());
+            }
+            log.info("{} - Cleaned up {} extension classloaders", tenant, tenantClassLoaders.size());
+        }
+    }
+
+    /**
+     * Clean up all classloaders for all tenants. Should be called during application shutdown.
+     */
+    public void cleanupAllExtensions() {
+        for (String tenant : tenantExtensionClassLoaders.keySet()) {
+            cleanupTenantExtensions(tenant);
+        }
+        log.info("Cleaned up all extension classloaders");
     }
 }
